[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/demos/micro_animations_demo.gd" id="1"]

[node name="MicroAnimationsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MICRO-ANIMATIONS & POLISH DEMO"
horizontal_alignment = 1

[node name="DemoButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SectionLabel" type="Label" parent="VBoxContainer/DemoButtons"]
layout_mode = 2
text = "Interactive Elements (Hover & Press)"
horizontal_alignment = 1

[node name="HoverButton" type="Button" parent="VBoxContainer/DemoButtons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Hover Over Me"

[node name="PressButton" type="Button" parent="VBoxContainer/DemoButtons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "Click Me (Press Effect)"

[node name="IdleDemo" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SectionLabel" type="Label" parent="VBoxContainer/IdleDemo"]
layout_mode = 2
text = "Idle Animations (Continuous)"
horizontal_alignment = 1

[node name="PanelsContainer" type="HBoxContainer" parent="VBoxContainer/IdleDemo"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BreathingPanel" type="Panel" parent="VBoxContainer/IdleDemo/PanelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/IdleDemo/PanelsContainer/BreathingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Breathing
(Scale Pulse)"
horizontal_alignment = 1

[node name="FloatingPanel" type="Panel" parent="VBoxContainer/IdleDemo/PanelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/IdleDemo/PanelsContainer/FloatingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Floating
(Vertical Move)"
horizontal_alignment = 1

[node name="RotationPanel" type="Panel" parent="VBoxContainer/IdleDemo/PanelsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/IdleDemo/PanelsContainer/RotationPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Gentle
Rotation"
horizontal_alignment = 1

[node name="ReducedMotionToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Reduced Motion Mode (Disables Idle Animations)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"
